# CMake_Variable_Note

./: CMakeLists.txt  README.md
APP1/: CMakeLists.txt
APP2/: CMakeLists.txt
